--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -24,6 +24,10 @@
   .carousel-inner
     .item
       height: 60vh
+      @media (max-width: $mobile-width) and (orientation: landscape)
+        height: 90vh
+        .carousel.text .content-wrapper
+          max-height: 35vh
       .img-responsive
         height: 100%
         background-size: cover
