--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -5,22 +5,21 @@
     color: #003c71
 
   .img-gallery
-    border: 0px solid
-    border-radius: 0px
-    border-right: 0,5px solid
-    border-left: 1px solid
-    margin-bottom: 0px
+    // border: 0px solid
+    // border-radius: 0px
+    // border-right: 0.5px solid
+    // border-left: 1px solid
+    // margin-bottom: 0px
     img
       width: 100%
       height: 220px
-      position: relative
-    div
+    .gallery-text-content
       width: 90%
       top: 5px
       position: absolute
       visibility: hidden
     &:hover
-      div
+      .gallery-text-content
         visibility: visible
 
   .last-picture
