enhance proyectos view in homepage

--- a/content/themes/fedes/partials/proyectos.hbs
+++ b/content/themes/fedes/partials/proyectos.hbs
@@ -21,10 +21,8 @@
                   style="background-image: url('{{asset 'img/no-image.jpg'}}')"
                 {{/if}}
                 / >
-              <div class="projectContent gallery-text-content">
-                <p>
-                  {{content}}
-                </p>
+              <div class="gallery-text-content">
+                <div class="projectContent">{{content}}</div>
               </div>
             </div>
             <div class="project-name-wrapper">
