--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -5,6 +5,7 @@
     color: #003c71
 
   .img-gallery
+    position: relative
     // border: 0px solid
     // border-radius: 0px
     // border-right: 0.5px solid
@@ -14,10 +15,15 @@
       width: 100%
       height: 220px
     .gallery-text-content
-      width: 90%
-      top: 5px
+      // width: 90%
+      top: 0
       position: absolute
       visibility: hidden
+      padding: 2em
+      width: 100%
+      height: 100%
+      p
+        margin: 0 0 0.5em 0
     &:hover
       .gallery-text-content
         visibility: visible
