--- a/content/themes/fedes/lib/stylesheets/components/proyectos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/proyectos.sass
@@ -17,24 +17,17 @@
           background-size: cover
           background-position: 50%
           width: 99% // fix overlapping with bottom container
-        .projectContent
-          top: 0
-          width: 0
-          width: 100%
-          height: 100%
+        .gallery-text-content
           background-color: $blue-opacity
-
-      .img-gallery:hover .projectContent
-        display: block
-        text-align: center
-        color: $white
-        p
+        .projectContent
+          color: $white
+          height: 90%
+          overflow: hidden
           font-size: 15px
           font-weight: 200
-          text-align: left
-          width: 80%
-          margin-left: 30px
-          margin-top: 30px
+          text-align: justify
+          @media (max-width: $mobile-width)
+            font-size: 13px
 
       .project-name-wrapper
         background-color: white
