--- a/content/themes/fedes/lib/stylesheets/components/proyectos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/proyectos.sass
@@ -8,6 +8,9 @@
   .projectList
     .projectElement
       width: 100%
+      display: block
+      &:hover
+        text-decoration: none
       @media (max-width: $mobile-width)
         padding: 0.5em 0
         border-left: 1px solid $blue-dark
