--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -7,8 +7,8 @@
   <title>{{meta_title}}</title>
   <meta name="description" content="{{meta_description}}" />
 
+  <meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1.0, maximum-scale=1" />
   <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <link rel="stylesheet" href="{{asset 'css/application.css'}}">
