--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -111,7 +111,9 @@
       height: 275px
       width: 80%
       height: 80%
-      margin-left: 45px
+      margin: auto
+      left: 0
+      right: 0
       background-color: #002d54
 
       &-secondary
