--- a/content/themes/fedes/partials/footer-section.hbs
+++ b/content/themes/fedes/partials/footer-section.hbs
@@ -1,6 +1,6 @@
 {{#article}}
   <li>
-    <h5 class="textFooter">{{title}}</h5>
+    <h5 class="textFooter textFooter-title">{{title}}</h5>
   </li>
-  <li class="textFooter">{{content}}</li>
+  <li class="textFooter textFooter-content">{{content}}</li>
 {{/article}}
