--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -4,6 +4,8 @@ footer
   background: $blue-dark
   padding-top: 1px
   padding-bottom: 25px
+  button
+    color: white
   .textFooter
     color: #FFFFFF
 
@@ -26,10 +28,6 @@ footer
       color: $turquoise
       margin: 0 0 0.5em 0
 
-  // .textFormFooter
-  //   color: #00b09a
-  //   font-size: 15px
-
   .colFooter
     .form-group .form-control
       border-radius: 0px
@@ -51,24 +49,16 @@ footer
     height: 25px
 
   .leyendfooter
-    align : left
     color: $blue-one
-    padding-left: 15px
-    margin-top: 50px
-
-.footer-navbar
-  .navbar-list .navbar-menuItem
-    margin-left: 50px
+    margin: 0.5em 0 3em 0
+    text-align: right
+    font-size: 0.8em
 
 @media (max-width: $mobile-width)
   footer
     background: $blue-dark
     padding-top: 1px
     padding-bottom: 25px
-
-    // .textFormFooter
-    //   color: #00b09a
-    //   font-size: 15px
 
     .colFooter
       .form-group .form-control
@@ -83,13 +73,3 @@ footer
       padding: 0
       width: 25px
       height: 25px
-
-    .leyendfooter
-      align : left
-      color: $blue-one
-      padding-left: 15px
-      margin-top: 50px
-
-  .footer-navbar
-    .navbar-list .navbar-menuItem
-      margin-left: 50px
