--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -60,12 +60,14 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-lg-12">
-      <h6 class="leyendfooter">Powered by noggalito</a></li>
-    </div>
+  <div class="container leyendfooter">
+    <a class="" href="http://noggalito.com" target="_blank">
+      powered by noggalito
+    </a>
   </div>
 </footer>
+
+<div class="clearfix"></div>
 
 <nav class="navbar navbar-default carousel footer-navbar">
   <div class="container-fluid">
