--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -4,9 +4,15 @@ footer
   background: $blue-dark
   padding-top: 1px
   padding-bottom: 25px
+  @media (max-width: $mobile-width)
+    .footer-inner
+      max-width: 85%
+      margin: auto
+
   button
     color: white
-  .textFooter
+
+  a, .textFooter
     color: #FFFFFF
 
   .textFooter-title
