--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -41,7 +41,7 @@
     background-color: $blue-transparent
     width: 100%
     height: 30%
-    bottom: 0
+    bottom: -1px
     opacity: 0.7
     position: absolute
 
