revise carousel & main header

--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -7,7 +7,7 @@
   position: relative
 
   .carousel.slide
-    padding-top: 46px
+    // padding-top: 46px
 
   .carousel-main
     margin-top: 1.9em
