revise secondary carousel and proyectos page

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -3,6 +3,7 @@
 @import "components/variables"
 @import "components/navbar"
 @import "components/carousel"
+@import "components/carousel-secondary"
 @import "components/gearDivider"
 @import "components/gearDivider-inverse"
 @import "components/servicios"
