--- a/content/themes/fedes/partials/carousel-footer.hbs
+++ b/content/themes/fedes/partials/carousel-footer.hbs
@@ -3,9 +3,7 @@
     {{#article}}
       <div class="carousel-footer {{^is "index"}} carousel-footer-secondary {{/is}}">
         {{#is "index"}}
-          <span class="textFooter">
-            {{content}}
-          </span>
+          <span class="textFooter">{{content}}</span>
         {{/is}}
       </div>
     {{/article}}
