--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -6,7 +6,7 @@ footer
   padding-bottom: 25px
   @media (max-width: $mobile-width)
     .footer-inner
-      max-width: 85%
+      max-width: $maxMobileWidth
       margin: auto
 
   button
