--- a/content/themes/fedes/lib/stylesheets/components/variables.sass
+++ b/content/themes/fedes/lib/stylesheets/components/variables.sass
@@ -4,6 +4,8 @@ $tablet-width: 600px
 $desktop-width: 992px
 $desktopHD-width: 1200px
 
+$maxMobileWidth: 85%
+
 // Colors
 $blue-light: #0055b8
 $turquoise: #00b09a
