--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -1,32 +1,27 @@
 <div class="container carousel">
   <div id="myCarousel" class="carousel slide {{^is "index"}} carousel-main-secondary {{/is}}" data-ride="carousel">
-    <div class="carousel-inner {{^is "index"}} carousel-inner-secondary {{/is}}"
-      role="listbox">
+    <div class="carousel-inner" role="listbox">
       {{#get "posts" filter="tag:carouselimagen" as |images|}}
         {{#foreach images}}
-            <div class="item">
-              <div style="background-image: url('{{image}}')" class="img-responsive"></div>
-              <div class="menu-carousel {{^is "index"}} menu-carousel-secondary {{/is}}">
-                <div class="carousel text text-nowrap {{^is "index"}} text-nowrap-secondary {{/is}}">
-                  <h1>{{title}}</h1>
-                  <div class="content-wrapper">
-                    <p>
-                      {{content}}
-                    </p>
-                  </div>
-                </div>
-                <div class="carousel-controls-wrapper {{^is "index"}} carousel-controls-wrapper-secondary {{/is}}">
-                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>
+          <div class="item">
+            <div style="background-image: url('{{image}}')" class="img-responsive"></div>
+            <div class="menu-carousel">
+              <div class="carousel text text-nowrap">
+                <h1>{{title}}</h1>
+                <div class="content-wrapper">{{content}}</div>
+              </div>
+              <div class="carousel-controls-wrapper">
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
               </div>
             </div>
+          </div>
         {{/foreach}}
       {{/get}}
     </div>
