--- a/content/themes/fedes/lib/stylesheets/components/servicios.sass
+++ b/content/themes/fedes/lib/stylesheets/components/servicios.sass
@@ -1,14 +1,4 @@
-.textServicios
-  background-color: #f2f2f2
-
-.row-services
-  .img-gallery-services
-    border: 0px solid
-    border-radius: 0px
-    border-right: 0.5px solid
-    border-left: 1px solid
-    margin-bottom: 0px
-    img
-      width: 100%
-      height: 220px
-      position: relative
+.container.gallery-principal
+  .row-services
+    .img-gallery img
+      height: 30vh
