enhance view for services content

--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -25,7 +25,7 @@
     margin-top: -70px
     text-align: right
     color: $blue-dark
-    background-color: #ebeaed
+    background-color: $dark-grey
     font-size: 20px
     padding: 50px 2% 1% 30%
     webkit-clip-path: polygon(0 75%, 100% 30%, 100% 100%, 0% 100%)
