--- a/content/themes/fedes/partials/carouselEquipo.hbs
+++ b/content/themes/fedes/partials/carouselEquipo.hbs
@@ -3,32 +3,42 @@
         <div class="carousel slide" id="myCarouselEquipo">
           <div class="carousel-inner cauroselEquipo">
             {{#get "posts" filter="tag:imagenequipo" as |images|}}
-              {{#foreach images}}
+            {{#foreach images}}
               <div class="item">
-                <div class="col-xs-12 col-sm-4">
-                  <figure class="img-gallery-services">
-                    {{#if image}}
-                      <div class="img-gallery">
-                        <img src="{{image}}" class="img-responsive"/>
-                        <div>{{content}}</div>
-                      </div>
-                    {{else}}
-                      <div class="img-gallery">
-                        <img src="{{asset 'img/no-image.jpg'}}" class="img-responsive">
-                        <div>{{content}}</div>
-                      </div>
-                    {{/if}}
-                    <div>
+                <a class="gallery-element" href="{{url}}">
+                  <div class="img-gallery">
+                    <img
+                      class="img-responsive"
+                      {{#if image}}
+                        style="background-image: url('{{image}}')"
+                      {{else}}
+                        style="background-image: url('{{asset 'img/no-image.jpg'}}')"
+                      {{/if}}
+                      / >
+                    <div class="gallery-text-content">
+                      <div class="projectContent">{{content}}</div>
+                    </div>
+                  </div>
+                  <div class="gallery-caption-wrapper">
+                    <div class="gallery-caption">
                       <p>{{title}}</p>
                     </div>
-                  </figure>
-                </div>
+                  </div>
+                </a>
               </div>
-              {{/foreach}}
+            {{/foreach}}
             {{/get}}
           </div>
-          <a class="left carousel-control" href="#myCarouselEquipo" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-          <a class="right carousel-control" href="#myCarouselEquipo" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+          <div class="carousel-controls-wrapper">
+            <a class="left carousel-control" href="#myCarouselEquipo" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarouselEquipo" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
     </div>
 </div>
