Starting with styles

--- a/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
@@ -1,6 +1,6 @@
 .headerNavbar
   border-width: 0px
-  background-color: $dark-gray
+  background-color: $dark-grey
   border-radius: 0px
   height: 84px
   margin-left: 37%
