--- a/content/themes/fedes/lib/stylesheets/components/variables.sass
+++ b/content/themes/fedes/lib/stylesheets/components/variables.sass
@@ -12,9 +12,10 @@ $turquoise: #00b09a
 $blue-one: #00cfff
 $blue-dark: #003c71
 $white: #FFFFFF
+$black: #000000
 $blue-transparent: #002d54
 $grey: #5b5b5b
 $light-grey: #f2f2f2
 $medium-grey: #ebeaed
-$dark-gray: #e6e6e6
+$dark-grey: #e6e6e6
 $blue-opacity: rgba(0, 60, 113, 0.7)
