--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -7,7 +7,7 @@
         <div>
           <h2 class="gallery-title">Conoce al equipo</h2>
         </div>
-        <div class="row row-services">
+        <div class="row row-services row-equipo">
           <section>
             {{> "carouselEquipo"}}
           </section>
