--- a/content/themes/fedes/partials/carouselEquipo.hbs
+++ b/content/themes/fedes/partials/carouselEquipo.hbs
@@ -1,20 +1,21 @@
 <div class="container">
-    <div class="col-md-12">
-        <div class="carousel slide" id="myCarouselEquipo">
-          <div class="carousel-inner cauroselEquipo">
-            {{#get "posts" filter="tag:imagenequipo" as |images|}}
-            {{#foreach images}}
-              <div class="item">
+  <div class="col-md-12">
+    <div class="carousel slide" id="myCarouselEquipo">
+      <div class="carousel-inner cauroselEquipo">
+        {{#get "posts" filter="tag:imagenequipo" as |images|}}
+          {{#foreach images}}
+            <div class="item">
+              <div class="col-xs-12 col-sm-4 gallery-equipo">
                 <a class="gallery-element" href="{{url}}">
-                  <div class="img-gallery">
+                  <div class="img-gallery imgEquipo">
                     <img
-                      class="img-responsive"
-                      {{#if image}}
-                        style="background-image: url('{{image}}')"
-                      {{else}}
-                        style="background-image: url('{{asset 'img/no-image.jpg'}}')"
-                      {{/if}}
-                      / >
+                    class="img-responsive img-equipo"
+                    {{#if image}}
+                    style="background-image: url('{{image}}')"
+                    {{else}}
+                    style="background-image: url('{{asset 'img/no-image.jpg'}}')"
+                    {{/if}}
+                    / >
                     <div class="gallery-text-content">
                       <div class="projectContent">{{content}}</div>
                     </div>
@@ -26,19 +27,20 @@
                   </div>
                 </a>
               </div>
-            {{/foreach}}
-            {{/get}}
-          </div>
-          <div class="carousel-controls-wrapper">
-            <a class="left carousel-control" href="#myCarouselEquipo" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarouselEquipo" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
+            </div>
+          {{/foreach}}
+        {{/get}}
+      </div>
+      <div class="carousel-controls-wrapper controlsEquipo">
+        <a class="left carousel-control" href="#myCarouselEquipo" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarouselEquipo" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
+  </div>
 </div>
