Add pageEquipo to aplication.sass

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -17,3 +17,4 @@
 @import "components/navbarPricipal"
 @import "components/pageAliados"
 @import "components/pageContactos"
+@import "components/pageEquipo"
