delete class img-equipo

--- a/content/themes/fedes/partials/carouselEquipo.hbs
+++ b/content/themes/fedes/partials/carouselEquipo.hbs
@@ -9,7 +9,7 @@
                 <a class="gallery-element" href="{{url}}">
                   <div class="img-gallery imgEquipo">
                     <img
-                    class="img-responsive img-equipo"
+                    class="img-responsive"
                     {{#if image}}
                     style="background-image: url('{{image}}')"
                     {{else}}
