--- a/content/themes/fedes/page-contactos.hbs
+++ b/content/themes/fedes/page-contactos.hbs
@@ -3,10 +3,10 @@
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
     <div class="mapFedes">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d2132.91
-      51548895625!2d-79.20025998258377!3d-3.9874170302282934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
-      1!4m9!3e6!4m3!3m2!1d-3.986999!2d-79.1986022!4m3!3m2!1d-3.9870151!2d-79.1986719!5e0!3m2!1sen!2sec!4v1465356059504"
-      frameborder="0"  allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.760
+      23556374113!2d-79.19714415621873!3d-3.9867107959038353!2m3!1f0!2f0!3f0!3m2
+      !1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb47e326abc97d%3A0xe48a703b8ece7dcb!2s
+      PRENDHO+UTPL!5e0!3m2!1sen!2sec!4v1466042822552" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="container gallery gallery-principal contactosSection" >
       <div>
