--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -2,6 +2,8 @@
   margin-top: 26px
   width: 100%
   height: 450px
+  @media (max-width: $mobile-width)
+    width: 480px
   iframe
     width: 100%
     height: 450px
