--- a/content/themes/fedes/page-contactos.hbs
+++ b/content/themes/fedes/page-contactos.hbs
@@ -2,7 +2,7 @@
 {{#post}}
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
-    <div class="mapFedes col-sm-6"></div>
+    <div class="mapFedes"></div>
     <div class="container gallery gallery-principal contactosSection" >
       <div>
         <h2 class="gallery-title">Comunícate con nosotros</h2>
