--- a/content/themes/fedes/partials/carouselAliados.hbs
+++ b/content/themes/fedes/partials/carouselAliados.hbs
@@ -9,19 +9,19 @@
             <div>
               <p>{{title}}</p>
             </div>
-            <div class="controlsCarousel">
-              <a class="left carousel-control" href="#myCarouselAliados" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#myCarouselAliados" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
           </div>
           {{/foreach}}
         {{/get}}
+      </div>
+      <div class="carousel-controls-wrapper controlsAliados">
+        <a class="left carousel-control" href="#myCarouselAliados" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarouselAliados" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </div>
