change visibilty for carousel aliados

--- a/content/themes/fedes/partials/carouselAliados.hbs
+++ b/content/themes/fedes/partials/carouselAliados.hbs
@@ -1,7 +1,7 @@
-<div class="carouselmovil">
+<div class="carouselmovil visible-xs">
   <div class="container">
     <div id="myCarouselAliados" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner carouselAliados visible-xs" role="listbox">
+      <div class="carousel-inner carouselAliados" role="listbox">
         {{#get "posts" filter="tag:aliadosfedes" as |images|}}
           {{#foreach images}}
           <div class="item">
