--- a/content/themes/fedes/page-aliados.hbs
+++ b/content/themes/fedes/page-aliados.hbs
@@ -4,9 +4,11 @@
   <main id="content" class="content" role="main">
     {{> "carousel"}}
       <div class="container gallery gallery-principal" id="gallery-fedes">
-        <div>
-          <h2 class="gallery-title">Aliados</h2>
-        </div>
+        {{#get "tags" filter="slug:aliados" as |aliadosTag|}}
+          {{#aliadosTag}}
+            {{> "gallery-title" currentTag=aliadosTag}}
+          {{/aliadosTag}}
+        {{/get}}
         <div class = "hidden-xs">
           <div class="row row-services">
             <section>
