--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -3,13 +3,15 @@
   width: 100%
   height: 450px
   @media (max-width: $mobile-width)
-    width: 480px
+    width: 100%
   iframe
     width: 100%
     height: 450px
 .contactosSection
   .colContactos
     padding-left: 97px
+    @media (max-width: $mobile-width)
+      padding-left: 0px
     .textFormContactos
       color: $turquoise
       padding-bottom: 20px
