--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -1,5 +1,6 @@
 @import "vendor/bootstrap.min.css"
 
+@import "components/font"
 @import "components/variables"
 @import "components/navbar"
 @import "components/carousel"
